--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
+    "faker": "5.5.3",
+    "firebase": "^9.6.10",
     "next": "latest",
+    "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-input-emoji": "^4.1.0",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
