--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "faker": "5.5.3",
     "firebase": "^9.6.10",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-emoji": "^4.1.0",
+    "react-moment": "^1.1.1",
+    "recoil": "^0.6.1",
     "tailwind-scrollbar": "^1.3.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
